Nedelja_11/pascal_prosirena_verzija/parser.output
Grammar

    0 $accept: program $end

    1 program: blok '.'

    2 blok: POCETAK niz_naredbi KRAJ

    3 niz_naredbi: niz_naredbi naredba ';'
    4            | naredba ';'

    5 naredba: ISPISI '(' STRING ')'
    6        | ISPISI '(' izraz ')'
    7        | ID DODELA izraz
    8        | UNESI '(' ID ')'
    9        | AKOJE izraz ONDA ':' naredba INACE ':' naredba
   10        | AKOJE izraz ONDA ':' naredba
   11        | DOKJE izraz RADISLEDECE ':' blok

   12 izraz: izraz '+' izraz
   13      | izraz '-' izraz
   14      | izraz '*' izraz
   15      | izraz '/' izraz
   16      | izraz MOD izraz
   17      | '(' izraz ')'
   18      | izraz '<' izraz
   19      | izraz '>' izraz
   20      | izraz EQ izraz
   21      | izraz NEQ izraz
   22      | izraz LEQ izraz
   23      | izraz GEQ izraz
   24      | ID
   25      | BROJ
   26      | H_BROJ


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 6 8 17
    ')' (41) 5 6 8 17
    '*' (42) 14
    '+' (43) 12
    '-' (45) 13
    '.' (46) 1
    '/' (47) 15
    ':' (58) 9 10 11
    ';' (59) 3 4
    '<' (60) 18
    '>' (62) 19
    error (256)
    POCETAK (258) 2
    KRAJ (259) 2
    ISPISI (260) 5 6
    UNESI (261) 8
    DOKJE (262) 11
    ONDA (263) 9 10
    INACE (264) 9
    AKOJE (265) 9 10
    RADISLEDECE (266) 11
    DODELA (267) 7
    EQ (268) 20
    NEQ (269) 21
    LEQ (270) 22
    GEQ (271) 23
    MOD (272) 16
    STRING <id> (273) 5
    ID <id> (274) 7 8 24
    BROJ <x> (275) 25
    H_BROJ <x> (276) 26


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program <b> (34)
        on left: 1
        on right: 0
    blok <b> (35)
        on left: 2
        on right: 1 11
    niz_naredbi <v> (36)
        on left: 3 4
        on right: 2 3
    naredba <n> (37)
        on left: 5 6 7 8 9 10 11
        on right: 3 4 9 10
    izraz <i> (38)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
        on right: 6 7 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23


State 0

    0 $accept: . program $end

    POCETAK  shift, and go to state 1

    program  go to state 2
    blok     go to state 3


State 1

    2 blok: POCETAK . niz_naredbi KRAJ

    ISPISI  shift, and go to state 4
    UNESI   shift, and go to state 5
    DOKJE   shift, and go to state 6
    AKOJE   shift, and go to state 7
    ID      shift, and go to state 8

    niz_naredbi  go to state 9
    naredba      go to state 10


State 2

    0 $accept: program . $end

    $end  shift, and go to state 11


State 3

    1 program: blok . '.'

    '.'  shift, and go to state 12


State 4

    5 naredba: ISPISI . '(' STRING ')'
    6        | ISPISI . '(' izraz ')'

    '('  shift, and go to state 13


State 5

    8 naredba: UNESI . '(' ID ')'

    '('  shift, and go to state 14


State 6

   11 naredba: DOKJE . izraz RADISLEDECE ':' blok

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 19


State 7

    9 naredba: AKOJE . izraz ONDA ':' naredba INACE ':' naredba
   10        | AKOJE . izraz ONDA ':' naredba

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 20


State 8

    7 naredba: ID . DODELA izraz

    DODELA  shift, and go to state 21


State 9

    2 blok: POCETAK niz_naredbi . KRAJ
    3 niz_naredbi: niz_naredbi . naredba ';'

    KRAJ    shift, and go to state 22
    ISPISI  shift, and go to state 4
    UNESI   shift, and go to state 5
    DOKJE   shift, and go to state 6
    AKOJE   shift, and go to state 7
    ID      shift, and go to state 8

    naredba  go to state 23


State 10

    4 niz_naredbi: naredba . ';'

    ';'  shift, and go to state 24


State 11

    0 $accept: program $end .

    $default  accept


State 12

    1 program: blok '.' .

    $default  reduce using rule 1 (program)


State 13

    5 naredba: ISPISI '(' . STRING ')'
    6        | ISPISI '(' . izraz ')'

    STRING  shift, and go to state 25
    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 26


State 14

    8 naredba: UNESI '(' . ID ')'

    ID  shift, and go to state 27


State 15

   24 izraz: ID .

    $default  reduce using rule 24 (izraz)


State 16

   25 izraz: BROJ .

    $default  reduce using rule 25 (izraz)


State 17

   26 izraz: H_BROJ .

    $default  reduce using rule 26 (izraz)


State 18

   17 izraz: '(' . izraz ')'

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 28


State 19

   11 naredba: DOKJE izraz . RADISLEDECE ':' blok
   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    RADISLEDECE  shift, and go to state 29
    EQ           shift, and go to state 30
    NEQ          shift, and go to state 31
    LEQ          shift, and go to state 32
    GEQ          shift, and go to state 33
    MOD          shift, and go to state 34
    '<'          shift, and go to state 35
    '>'          shift, and go to state 36
    '+'          shift, and go to state 37
    '-'          shift, and go to state 38
    '*'          shift, and go to state 39
    '/'          shift, and go to state 40


State 20

    9 naredba: AKOJE izraz . ONDA ':' naredba INACE ':' naredba
   10        | AKOJE izraz . ONDA ':' naredba
   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    ONDA  shift, and go to state 41
    EQ    shift, and go to state 30
    NEQ   shift, and go to state 31
    LEQ   shift, and go to state 32
    GEQ   shift, and go to state 33
    MOD   shift, and go to state 34
    '<'   shift, and go to state 35
    '>'   shift, and go to state 36
    '+'   shift, and go to state 37
    '-'   shift, and go to state 38
    '*'   shift, and go to state 39
    '/'   shift, and go to state 40


State 21

    7 naredba: ID DODELA . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 42


State 22

    2 blok: POCETAK niz_naredbi KRAJ .

    $default  reduce using rule 2 (blok)


State 23

    3 niz_naredbi: niz_naredbi naredba . ';'

    ';'  shift, and go to state 43


State 24

    4 niz_naredbi: naredba ';' .

    $default  reduce using rule 4 (niz_naredbi)


State 25

    5 naredba: ISPISI '(' STRING . ')'

    ')'  shift, and go to state 44


State 26

    6 naredba: ISPISI '(' izraz . ')'
   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    EQ   shift, and go to state 30
    NEQ  shift, and go to state 31
    LEQ  shift, and go to state 32
    GEQ  shift, and go to state 33
    MOD  shift, and go to state 34
    '<'  shift, and go to state 35
    '>'  shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 45


State 27

    8 naredba: UNESI '(' ID . ')'

    ')'  shift, and go to state 46


State 28

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   17      | '(' izraz . ')'
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    EQ   shift, and go to state 30
    NEQ  shift, and go to state 31
    LEQ  shift, and go to state 32
    GEQ  shift, and go to state 33
    MOD  shift, and go to state 34
    '<'  shift, and go to state 35
    '>'  shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 47


State 29

   11 naredba: DOKJE izraz RADISLEDECE . ':' blok

    ':'  shift, and go to state 48


State 30

   20 izraz: izraz EQ . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 49


State 31

   21 izraz: izraz NEQ . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 50


State 32

   22 izraz: izraz LEQ . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 51


State 33

   23 izraz: izraz GEQ . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 52


State 34

   16 izraz: izraz MOD . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 53


State 35

   18 izraz: izraz '<' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 54


State 36

   19 izraz: izraz '>' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 55


State 37

   12 izraz: izraz '+' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 56


State 38

   13 izraz: izraz '-' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 57


State 39

   14 izraz: izraz '*' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 58


State 40

   15 izraz: izraz '/' . izraz

    ID      shift, and go to state 15
    BROJ    shift, and go to state 16
    H_BROJ  shift, and go to state 17
    '('     shift, and go to state 18

    izraz  go to state 59


State 41

    9 naredba: AKOJE izraz ONDA . ':' naredba INACE ':' naredba
   10        | AKOJE izraz ONDA . ':' naredba

    ':'  shift, and go to state 60


State 42

    7 naredba: ID DODELA izraz .
   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    EQ   shift, and go to state 30
    NEQ  shift, and go to state 31
    LEQ  shift, and go to state 32
    GEQ  shift, and go to state 33
    MOD  shift, and go to state 34
    '<'  shift, and go to state 35
    '>'  shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 7 (naredba)


State 43

    3 niz_naredbi: niz_naredbi naredba ';' .

    $default  reduce using rule 3 (niz_naredbi)


State 44

    5 naredba: ISPISI '(' STRING ')' .

    $default  reduce using rule 5 (naredba)


State 45

    6 naredba: ISPISI '(' izraz ')' .

    $default  reduce using rule 6 (naredba)


State 46

    8 naredba: UNESI '(' ID ')' .

    $default  reduce using rule 8 (naredba)


State 47

   17 izraz: '(' izraz ')' .

    $default  reduce using rule 17 (izraz)


State 48

   11 naredba: DOKJE izraz RADISLEDECE ':' . blok

    POCETAK  shift, and go to state 1

    blok  go to state 61


State 49

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   20      | izraz EQ izraz .
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 20 (izraz)


State 50

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   21      | izraz NEQ izraz .
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 21 (izraz)


State 51

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   22      | izraz LEQ izraz .
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 22 (izraz)


State 52

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz
   23      | izraz GEQ izraz .

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 23 (izraz)


State 53

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   16      | izraz MOD izraz .
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    $default  reduce using rule 16 (izraz)


State 54

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   18      | izraz '<' izraz .
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 18 (izraz)


State 55

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   19      | izraz '>' izraz .
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 19 (izraz)


State 56

   12 izraz: izraz . '+' izraz
   12      | izraz '+' izraz .
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 12 (izraz)


State 57

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   13      | izraz '-' izraz .
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    MOD  shift, and go to state 34
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 13 (izraz)


State 58

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   14      | izraz '*' izraz .
   15      | izraz . '/' izraz
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    $default  reduce using rule 14 (izraz)


State 59

   12 izraz: izraz . '+' izraz
   13      | izraz . '-' izraz
   14      | izraz . '*' izraz
   15      | izraz . '/' izraz
   15      | izraz '/' izraz .
   16      | izraz . MOD izraz
   18      | izraz . '<' izraz
   19      | izraz . '>' izraz
   20      | izraz . EQ izraz
   21      | izraz . NEQ izraz
   22      | izraz . LEQ izraz
   23      | izraz . GEQ izraz

    $default  reduce using rule 15 (izraz)


State 60

    9 naredba: AKOJE izraz ONDA ':' . naredba INACE ':' naredba
   10        | AKOJE izraz ONDA ':' . naredba

    ISPISI  shift, and go to state 4
    UNESI   shift, and go to state 5
    DOKJE   shift, and go to state 6
    AKOJE   shift, and go to state 7
    ID      shift, and go to state 8

    naredba  go to state 62


State 61

   11 naredba: DOKJE izraz RADISLEDECE ':' blok .

    $default  reduce using rule 11 (naredba)


State 62

    9 naredba: AKOJE izraz ONDA ':' naredba . INACE ':' naredba
   10        | AKOJE izraz ONDA ':' naredba .

    INACE  shift, and go to state 63

    $default  reduce using rule 10 (naredba)


State 63

    9 naredba: AKOJE izraz ONDA ':' naredba INACE . ':' naredba

    ':'  shift, and go to state 64


State 64

    9 naredba: AKOJE izraz ONDA ':' naredba INACE ':' . naredba

    ISPISI  shift, and go to state 4
    UNESI   shift, and go to state 5
    DOKJE   shift, and go to state 6
    AKOJE   shift, and go to state 7
    ID      shift, and go to state 8

    naredba  go to state 65


State 65

    9 naredba: AKOJE izraz ONDA ':' naredba INACE ':' naredba .

    $default  reduce using rule 9 (naredba)
